force-app/main/default/objects/AEQCC_Rebates__c/AEQCC_Rebates__c.object-meta.xml
<CustomObject>
    <label>AEQCC Rebate</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>AEQCC Rebates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AEQCC Rebates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>