force-app/main/default/objects/AEQCC_Rebates__c/fields/Cheque_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Amount__c</fullName>
    <inlineHelpText>Cheque amount is inclusive of GST</inlineHelpText>
    <label>Cheque Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>