force-app/main/default/objects/AEQCC_Rebates__c/fields/Date_Processed__c.field-meta.xml
<CustomField>
    <fullName>Date_Processed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when the cheque was issued to the customer.</inlineHelpText>
    <label>Date Processed</label>
    <type>Date</type>
</CustomField>