force-app/main/default/objects/AEQCC_Rebates__c/fields/Latest_three__c.field-meta.xml
<CustomField>
    <fullName>Latest_three__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Latest three</label>
    <type>Checkbox</type>
</CustomField>