force-app/main/default/objects/AEQCC_Rebates__c/fields/Prod_Reg_Link__c.field-meta.xml
<CustomField>
    <fullName>Prod_Reg_Link__c</fullName>
    <label>Prod Reg Link</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product_Registration__c.Type__c</field>
            <operation>equals</operation>
            <value>AEQCC</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_Registration__c</referenceTo>
    <relationshipLabel>AEQCC Rebates</relationshipLabel>
    <relationshipName>AEQCC_Rebates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>