force-app/main/default/objects/AEQCC_Rebates__c/fields/Rebate_Payment__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Payment__c</fullName>
    <inlineHelpText>Rebate Payment is exclusive of GST</inlineHelpText>
    <label>Rebate Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>