force-app/main/default/objects/AEQCC_Rebates__c/fields/Rebate_Sent_to__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Sent_to__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contact name and address details are source from American Express, based on Company&apos;s last updated Decision Maker</inlineHelpText>
    <label>Rebate Sent to</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>