force-app/main/default/objects/AEQCC_Rebates__c/fields/Rebate_term__c.field-meta.xml
<CustomField>
    <fullName>Rebate_term__c</fullName>
    <label>Rebate term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jan-Jun</fullName>
            </value>
            <value>
                <fullName>Jul-Dec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>