force-app/main/default/objects/AEQCC_Rebates__c/fields/Rebate_Tier__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Tier__c</fullName>
    <inlineHelpText>Rebate tier is determined by Domestic and International revenue on Qantas for the period.</inlineHelpText>
    <label>Rebate Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 %</fullName>
            </value>
            <value>
                <fullName>2 %</fullName>
            </value>
            <value>
                <fullName>3 %</fullName>
            </value>
            <value>
                <fullName>4 %</fullName>
            </value>
            <value>
                <fullName>5 %</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>