force-app/main/default/objects/AEQCC_Rebates__c/fields/Rebate_Year__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Year__c</fullName>
    <label>Rebate Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>